--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,5 +25,8 @@ jobs:
       - name: get deps
         run: go get -v -t -d ./...
 
+      - name: test
+        run: cd pkg/store && go test
+
       - name: build
         run: go build -v .
